--- a/sportsstore/src/index.html
+++ b/sportsstore/src/index.html
@@ -9,5 +9,20 @@
 </head>
 <body>
   <app-root></app-root>
+
+</body>
+</html>
+
+<!doctype html>
+<html lang="en">
+<head>
+ <meta charset="utf-8">
+ <title>SportsStore</title>
+ <base href="/">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body class="p-2">
+ <app>SportsStore Will Go Here</app>
 </body>
 </html>
